1. Folder name inside workspace changed from issue to bugs to ensure the name is more appropriate as this folder will be used throughout the build process to store the images of the issues and errors only 2. file path for images inside the  README.md updated  due to folder name changed inside workspace 3.changed class name of the cols  inside the row of #expo to col-md-4, col-md-3 and col-md-d in order to utilize the white space on the page in more efficiently 4.removed css property of allButton class from style.css to fix the display with buttons.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,11 +168,13 @@ body{
 }
 
 #box{
-    height: 450px;
-    width: 450px;
-    border-radius: 100%;
+   height: 50vh;
+    width: 100%;
     border: 10px solid white;
-    margin-left: 20px;
+    padding-left: 0;
+    margin-right: 0;
+    padding-right: 0;
+    margin-left: -8px;
     
 }
 
@@ -192,10 +194,6 @@ body{
     padding-top: 0.85em;
 }
 
-.allButton{
-display: inline;
-}
-
 .expo-container{
 padding-top: 7em;
 }
@@ -205,13 +203,11 @@ padding-top: 7em;
     color: #36627d;
 }
 
-
 #map{
     height: 70vh;
     width: 100%;
     border: 2px solid white;
     margin-left: -5px;
-    margin-top: 6em;
 }
 /*-----------------------Footer------------*/
 #footer{
@@ -228,18 +224,19 @@ padding-top: 7em;
 }
 
 /*------------------Media Queries--------*/
+
 @media screen and (max-width: 992px){
     .navbar-nav{
         margin-top: -55px;
     }
 }
 
-@media screen and (min-width: 992px){
+/* @media screen and (min-width: 992px){
     .btn{
         display: block;
         
     }
-}
+} */
 
 /* @media screen and (max-width: 576px) {
   .navbar-light .navbar-nav .nav-link {
